<resources>
    <string name="app_name">TemperatureConverter</string>
    <string name="titleMainScreenText">Конвертер Температур</string>

    <string name="FahrenheitItem">Фаренгейт</string>
    <string name="CelsiusItem">Цельсий</string>
    <string name="KelvinItem">Кельвин</string>
    <string name="RankineItem">Рэнкин</string>
    <string name="ReaumurItem">Реомюр</string>
    <string name="value">Значение</string>
    <string name="Result">Результат</string>
    <string name="Templates">Шаблоны</string>

    <string name="FahrenheitSign">%1$s °F</string>
    <string name="CelsiusSign">%1$s °C</string>
    <string name="KelvinSign">%1$s °K</string>
    <string name="RankineSign">%1$s °R</string>
    <string name="ReaumurSign">%1$s °Re</string>

    <string-array name="units">
        <item>Фаренгейт</item>
        <item>Цельсий</item>
        <item>Кельвин</item>
        <item>Рэнкин</item>
        <item>Реомюр</item>
    </string-array>
</resources>