<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="100"
    android:padding="8dp"
    tools:context=".MainActivity"

    >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:text="@string/titleMainScreenText"
        android:textColor="@color/mainTextColor"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <com.google.android.material.textfield.TextInputEditText-->
    <!--        android:id="@+id/editTextFirst"-->
    <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
    <!--        android:layout_width="216dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginTop="163dp"-->
    <!--        android:hint="Первое значение"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView2" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextBoxFirst"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:minWidth="150dp"
        app:layout_constraintHorizontal_weight="50"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextFirst"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:digits="1234567890"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/value"
            android:inputType="numberDecimal"
            android:maxLength="15"
            android:textColor="@color/mainTextColor"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="141dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:focusable="false"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="50"
        app:layout_constraintStart_toEndOf="@+id/editTextBoxFirst"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <AutoCompleteTextView
            android:id="@+id/spinner_first"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:focusable="false"
            android:fontFamily="@font/open_sans_semibold"
            android:inputType="none"
            android:paddingTop="12dp"
            android:text="@string/FahrenheitItem"
            android:textColor="@color/mainTextColor" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--################################################################################-->

    <!--    <com.google.android.material.textfield.TextInputEditText-->
    <!--        android:id="@+id/editTextSecond"-->
    <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"-->
    <!--        android:layout_width="216dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginTop="48dp"-->
    <!--        android:hint="Результат "-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/editTextFirst" -->
    <!--        />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextBoxSecond"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:inputType="none"
        android:minWidth="150dp"
        app:layout_constraintStart_toStartOf="@+id/editTextBoxFirst"
        app:layout_constraintTop_toBottomOf="@+id/editTextBoxFirst">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:hint="@string/Result"
            android:inputType="none"
            android:layerType="none"
            android:maxLength="15"
            android:text="0"
            android:textColor="@color/mainTextColor"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="141dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextBoxSecond"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <AutoCompleteTextView
            android:id="@+id/spinner_second"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:focusable="false"
            android:fontFamily="@font/open_sans_semibold"
            android:inputType="none"
            android:paddingTop="14dp"
            android:text="@string/CelsiusItem"
            android:textColor="@color/mainTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/imageSwapBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:focusable="false"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:srcCompat="@drawable/ic_baseline_swap_vert_24" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/Templates"
        android:textColor="@color/mainTextColor"
        app:layout_constraintStart_toStartOf="@+id/editTextBoxSecond"
        app:layout_constraintTop_toBottomOf="@+id/editTextBoxSecond" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="0dp"
        android:weightSum="3.0"
        app:layout_constraintDimensionRatio="h, 3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCtoR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans_semibold"
                android:text="°C to °R"
                android:textColor="@color/mainTextColor"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCtoK"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans_semibold"
                android:text="°C to °K"
                android:textColor="@color/mainTextColor"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCtoF"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans_semibold"
                android:text="°C to °F"
                android:textColor="@color/mainTextColor"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h, 3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewFtoK"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans_semibold"
                android:text="°F to °K"
                android:textColor="@color/mainTextColor"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewFtoC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            app:cardCornerRadius="12dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans_semibold"
                android:text="°F to °C"
                android:textColor="@color/mainTextColor"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewFtoR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1.0"
            app:cardCornerRadius="12dp"
            app:layout_optimizationLevel="ratio">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans_semibold"
                android:text="°F to °R"
                android:textColor="@color/mainTextColor"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>